# codex-visual-feedback

./: .gitignore  Makefile  README.md  codex-plugin.json
codex-visual-loop-plugin/: Cargo.toml  README.md  install.sh  manifest.json  pyproject.toml
codex-visual-loop-plugin/commands/: act.md  annotate.md  ax-tree.md  capture.md  diff.md  explain-app.md  loop.md  observe.md  visual-loop-feedback.md
codex-visual-loop-plugin/docs/: annotation-spec.md  packet-flow.md
codex-visual-loop-plugin/scripts/: annotate_image.py  bootstrap.sh  capture_app_window.sh  compare_images.py  doctor.sh  dump_ax_tree.sh  extract_frames.sh  happy_path.sh  inbox_visual_loop.sh  loop_compare.sh  observe_action_clip.sh  record_app_window.sh  summarize_video.sh  visual_loop_feedback.sh
codex-visual-loop-plugin/src-rs/: main.rs
codex-visual-loop-plugin/src/codex_visual_loop_plugin/: __init__.py  cli.py  visual_loop_feedback.py
demo/: DEMO-GUIDE.md  game.html  index.html  run-game-demo.sh
docs/: PR_CHANGELOG.md  codex-visual-loop-plugin.md  excalidraw-wireframing.md  visual-loop.md
skills/codex-visual-loop/: SKILL.md
tests/: test_codex_visual_loop_plugin.py  test_visual_reasoning_loop.py
