[package]
name = "codex-visual-loop-plugin"
version = "0.1.0"
edition = "2021"
description = "Standalone Codex visual loop plugin for UI capture, annotation, diffing, observation packets, and AX dumps."
license = "MIT"

[[bin]]
name = "codex-visual-loop"
path = "src-rs/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif"] }
font8x8 = "0.3"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wait-timeout = "0.2"

[dev-dependencies]
tempfile = "3.12"
